--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: tech blog
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  プログラマーだった人の技術系ブログ
+  プログラマーだった人の技術系ブログ。テスト中。
 baseurl: "/blog_prose" # the subpath of your site, e.g. /blog
 url: "https://marshmallow444.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
