--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ prose:
       - name: "layout"
         field:
           element: "hidden"
-          value: "blog"
+          value: "post"
       - name: "title"
         field:
           element: "text"
