--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: tech blog
+title: ましゅまろsandbox
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  プログラマーだった人の技術系ブログ。テスト中。
+  GitHub Pagesを色々いじってみる。テスト用のサイト。
 baseurl: "/blog_prose" # the subpath of your site, e.g. /blog
 url: "https://marshmallow444.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
